--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<script language="javascript" type="text/javascript" src="Sketch.js"></script>
 	<!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
+	<script language="javascript" type="text/javascript" src="Ball.js"></script>
+
 	<!-- This line removes any default padding and style. 
 	You might only need one of these values set. -->
 	<style> body {padding: 0; margin: 10;} </style>
